@@ -4,4 +4,4 @@
 如果您在使用过程中发现问题，请到论坛发帖。
 http://traplug.5d6d.com/forum-7-1.html
 
-特别感谢：chihsun, skycen(firefox), jones125, 小流姐姐
+特别感谢：chihsun, skycen, jones125, 小流姐姐, 小八, 眼泪, 等等
