@@ -1,6 +1,16 @@
 ﻿以下功能暂时不可用：
 1、出兵
 
+-= Stran 1.2.2 [GoldenPhoenix] 发布 =-
+- 可在游戏中设置新的主村
+- 修正了升级兵种探测的问题 (我想杀人……)
+- 运输标记于状态栏：NC不运送粮食，FG无视爆仓检查
+
+-= Stran 1.2.1 [GoldenPhoenix] 发布 =-
+- 修正了研发兵种探测的问题
+- 修正了研发等级检测的问题
+- 修正了饮马槽酿酒厂的数据
+
 -= Stran 1.2.0 [GoldenPhoenix] 发布 =-
 - 基于T3.5版本
 - 修正了升级兵种的显示问题
